src/objects/PSA_Cost_Rate__c.object
<CustomObject>
    <fields>
        <fullName>PSA_Cost_Level__c</fullName>
        <description>Combination of Entity Code (2 digit), Department Code (3 digit), and PS Level (3 digit) to determine cost rates.</description>
        <formula>PSA_Legal_Entity__r.PSA_Entity_Code__c + &apos;-&apos; +  PSA_Department__r.PSA_Department_Code__c + &apos;-&apos; +  TEXT( PSA_PS_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combination of Entity Code (2 digit), Department Code (3 digit), and PS Level (3 digit) to determine cost rates.</inlineHelpText>
        <label>Cost Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Delivery_Cost_Rate__c</fullName>
        <label>Delivery Cost Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in combination with Legal Entity and PS Level to match with Resources</description>
        <inlineHelpText>Used in combination with Legal Entity and PS Level to match with Resources</inlineHelpText>
        <label>Department</label>
        <referenceTo>PSA_Department__c</referenceTo>
        <relationshipLabel>PSA Cost Rates</relationshipLabel>
        <relationshipName>PSA_Cost_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Fully_Loaded_Cost_Rate__c</fullName>
        <label>Fully Loaded Cost Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>PSA_Entity__c</referenceTo>
        <relationshipLabel>PSA Cost Rates</relationshipLabel>
        <relationshipName>PSA_Cost_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_PS_Level__c</fullName>
        <label>PS Level</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>142</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>203</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>206</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>235</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>245</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>255</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>305</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>320</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>330</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>345</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Propagated_Date__c</fullName>
        <description>The date/time this rate has been propagated to the active resource records matching PS Level, Entity, and currency.</description>
        <label>Propagated Date</label>
        <type>DateTime</type>
    </fields>
    <label>PSA Cost Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Effective_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_PS_Level__c</columns>
        <columns>PSA_Delivery_Cost_Rate__c</columns>
        <columns>PSA_Fully_Loaded_Cost_Rate__c</columns>
        <columns>PSA_Legal_Entity__c</columns>
        <columns>PSA_Department__c</columns>
        <columns>PSA_Cost_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canadian_Cost_Rates</fullName>
        <columns>NAME</columns>
        <columns>PSA_Effective_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_PS_Level__c</columns>
        <columns>PSA_Delivery_Cost_Rate__c</columns>
        <columns>PSA_Fully_Loaded_Cost_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CAD</value>
        </filters>
        <label>Canadian Cost Rates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Cost_Rates</fullName>
        <columns>NAME</columns>
        <columns>PSA_Effective_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_PS_Level__c</columns>
        <columns>PSA_Delivery_Cost_Rate__c</columns>
        <columns>PSA_Fully_Loaded_Cost_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>United States Cost Rates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cost Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Cost Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>